--- a/style.css
+++ b/style.css
@@ -223,24 +223,34 @@ div {
 
 main {
   align-content: center;
-  text-align: center;
 }
 
-.container {
+.long-vertical {
   width: 50%;
+  height: 50%;
+}
+
+.short-vertical {
+  width: 50%;
+  height: 50%;
+}
+
+.horizontal {
+  width: 50%;
+  height: 50%;
 }
 
 h1, h2 {
   color: #000;
-  font-size: 3.5rem;
+  font-size: 1.5rem;
   margin-left: 1em;
   margin-top: 1em;
 }
 
 h2 {
   color: #999;
-  font-size: 2rem;
-  margin-left: 1em;
+  font-size: 1rem;
+  margin-left: 1.5em;
   text-decoration: underline;
   text-decoration-color: #999;
 }
